
   Fix bug 3006631 - Null pointer exception when posting multipart
   form data. Thanks to Edwin Clubb for the report, and to Ouray Viney
   for testing the fix.

   The TCPProxy can be called with "-http clojure" to generate a
   Clojure script.

   Fix bug 3431764 - DCR instrumentation fails with Java 7. Thanks to
   Gary Mulder for the report.


The Grinder 3.6
---------------

   The script engine API has been improved so that adding support
   for other languages is straightforward.

   Clojure is supported as an alternative test script language.

   Fulfil feature request 1849150 - Synchronisation points.
   Thanks to Aditya for the request.

   Fix bug 3406177 - DCR instrumented objects are not garbage
   collected. Thanks to Gary Mulder for the report and diagnostics.

   Fix bug 3413171 - TCPProxy broken in The Grinder 3.5. Thanks to
   Lonnie Choset for the report.

   Fix bug 3411728 - helloworld.py doesn't work with DCR
   instrumentation. Thanks to Jeff Vincent for the report.

   Fulfill feature request 3389028 - XSLTHelper API to control indent.
   Thanks to Jean-Francois Poilpret for the request.


The Grinder 3.5
---------------

   Fix bug 3008924 - Jython 2.5, assertion error if script has __del__
   method. Thank to Thomas Falkenberg for the report.

   Fix bug 2988755 - NPE in JythonScriptExecutionException
   .tracebackToMessage(). Thanks to Brian Runck for the report.

   Fix bug 2952023 - Cookie.parse should recognise "httponly" (lower
   case). Thanks to amachang for the report and the patch.

   Fix bug 3092275 - Incorrect TPS totals in output log. Thanks to
   Travis Bear for the report.

   Fix bug 3132643 - No statistics to report. This occurred if a clock
   went backwards in time during a test, and prevented the test from
   ever executing successfully again. Thanks to Wallander for the
   report.

   Fix bug 3132940 - Incorrect connect/DNS times when connect timeout
   set. This was due to an error in the fix for 3132940. Thanks to